version-1 of the prototype is completed
